--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   flutter_riverpod: ^2.3.6
   smooth_page_indicator: ^1.1.0
   firebase_auth: ^4.4.2
+  shared_preferences: ^2.1.0
+  email_validator: ^2.1.17
+  flutter_svg: ^2.0.5
 
 dev_dependencies:
   flutter_test:
@@ -64,8 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - asset/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -79,17 +82,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Comme
+      fonts:
+        - asset: asset/fonts/Comme/Comme-Regular.ttf
+        - asset: asset/fonts/Comme/Comme-Bold.ttf
+          style: italic
+    - family: Montserrat
+      fonts:
+        - asset: asset/fonts/Montserrat/Montserrat-Bold.ttf
+        - asset: asset/fonts/Montserrat/Montserrat-Regular.ttf
+          weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
